# aero4701_payload

./: .gitignore  CMakeLists.txt  README.md  docking_trajectory.py
apps/camera/: CMakeLists.txt
apps/camera/camera_settings/: pi_camera_settings.txt
apps/camera/src/: cameraHelper.py  cameraMaster.py  camera_master.py  lcmHelper.py  lcm_helper.py
apps/camera/tests/: cameraSettingsTest.py  crop.py  dummyPayloadController.cpp  roiTuning.py  serialTest.py
apps/limit_switches/: CMakeLists.txt
apps/limit_switches/include/: limitSwitchReader.hpp
apps/limit_switches/src/: limitSwitchReader.cpp  main.cpp
apps/obc_bridge/: CMakeLists.txt
apps/obc_bridge/include/: lcmHandler.hpp  obcBridge.hpp  obcBridgeLcmHandler.hpp  obcMessageHandler.hpp  uartInterface.hpp
apps/obc_bridge/src/: main.cpp  obcBridge.cpp  obcBridgeLcmHandler.cpp  obcMessageHandler.cpp  uartInterface.cpp
apps/obc_bridge/tests/: obc_receive.py  obc_receive_jpeg.py  obc_roundloop.py  obc_roundloop_debug.py  obc_sim.py  obc_transmit.py  test_obc_comms.cpp  uart_helpers.py
apps/payload_controller/: CMakeLists.txt
apps/payload_controller/include/: lcmHandler.hpp  payloadController.hpp  servoMotor.hpp  stewartPlatform.hpp
apps/payload_controller/src/: lcmHandler.cpp  main.cpp  payloadController.cpp  stewartPlatform.cpp
apps/payload_controller/src/camera/: dummyPayloadController.cpp
apps/payload_controller/tests/: cameraPayloadController.cpp  publishDummyCameraResponse.cpp  publishDummyLimitSwitches.cpp  publishDummyServoState.cpp  publishRunController.cpp  testKinematicsClosure.cpp  test_lcm_publisher.cpp
apps/servo_controller/: CMakeLists.txt
apps/servo_controller/include/: servoController.hpp  servo_controller.hpp
apps/servo_controller/src/: main.cpp  servoController.cpp  servo_controller.cpp
apps/servo_monitor/: CMakeLists.txt
apps/servo_monitor/include/: servoMonitor.hpp
apps/servo_monitor/src/: main.cpp  servoMonitor.cpp  servo_monitor.cpp
apps/servo_state_reader/: CMakeLists.txt
apps/servo_state_reader/include/: servoStateReader.hpp
apps/servo_state_reader/src/: main.cpp  servoStateReader.cpp  servo_state_reader.cpp
apps/switch_monitor/: CMakeLists.txt
apps/switch_monitor/include/: switchMonitor.hpp
apps/switch_monitor/src/: main.cpp  switchMonitor.cpp
config/: payloadConfig.hpp
data/: docking_trajectory.csv  docking_trajectory_1.csv  docking_trajectory_short.csv  gyro_trajectory.csv  point_cloud.csv  trajectory.csv  trajectory_simple.csv
data/hardware_test/: experiment_settings.csv  trajectory_settings.csv
data/nominal/: scalar_settings.csv  trajectory_settings.csv
data/results/: results.csv
data/test_obc_nominal/: experiment_settings.csv  scalar_settings.csv  trajectory_settings.csv
data_processing/: digital_twin.py  plotMotorAngles.py  plotPointCloud.py  servo_debug_gui.py
include/: lcmHandler.hpp  payload.hpp  servoMotor.hpp  stewartPlatform.hpp
lcm_definitions/: payload_topics.lcm
lcm_messages/: commands.hpp  payloadMessages.lcm
lcm_messages/payload_messages/: run_command.hpp
src/: lcmHandler.cpp  main.cpp  payload.cpp  servoMotor.cpp  stewartPlatform.cpp
src_python/: plot_motor_angles.py  plot_point_cloud.py
tests/: test_kinematics_closure.cpp  test_lcm_publisher.cpp
uart_tests/: loopback.py  test.py
